Changelog
=========

0.3.0 (Unreleased)
------------------

* updated to Plone 4.1 security and new "Site Administrator" role [keul]
* support for query expression starting with ``/``, that generate links to
  internal section of the site [keul]
* tabs settings panel is now protected with a specific permission [keul]
* protect the use of ``tal:`` or ``python:`` with a proper permission
  [keul]

0.2.0 (2011-05-19)
------------------

* added input validations [keul]
* more help texts and translations [keul]
* added a direct link to the ZMI manage section [keul]
* added a way to upload Generic Setup compatible ``actions.xml`` file, to
  automatically load actions [marco.mariani]

0.1.0a (2010-12-15)
-------------------

* initial release
