@@ -7,8 +7,16 @@
 
   <browser:page
       for="Products.CMFPlone.Portal.PloneSite"
+      name="manage-portaltabs-categories"
+      class=".controlpanel.PortalTabsSettingsControlPanel"
+      permission="collective.portaltabs.ManageTabsCategories"
+      layer="..interfaces.IPortalTabsLayer"
+      />
+  <browser:page
+      for="Products.CMFPlone.Portal.PloneSite"
       name="manage-portaltabs"
       class=".manage_portaltabs_view.ManagePortaltabsView"
+	  template="manage_portaltabs.pt"
       permission="collective.portaltabs.ManageTabs"
       layer="..interfaces.IPortalTabsLayer"
       />
