@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<action-icons xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-    i18n:domain="collective.portaltabs">
- <action-icon category="controlpanel"
-              action_id="ManagePortalTabs"
-              title="Manage portal tabs" priority="0"
-              icon_expr="++resource++newtab.png"
-              i18n:attributes="title"/>
-</action-icons>
