@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_properties">
- <object name="portaltabs_settings">
-  <property name="title">Settings for collective.portaltabs</property>
-  
-  <!-- properties are set in exportimport.py -->
-  
- </object>
-</object>
