@@ -1,0 +1,3 @@
+<registry>
+    <records interface="collective.portaltabs.interfaces.IPortalTabsSettings" />
+</registry>
