@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<layers>
+   <layer name="ManagePortalTabs"
+          interface="collective.portaltabs.interfaces.IPortalTabsLayer"
+          remove="True" />
+</layers>
